@@ -1844,19 +1844,19 @@
 }
 
 .type-article #form-social .field.fieldname-twitter,
-.type-article #form-social .field.fieldname-twitter_ressort,
+.type-article #form-social .field.fieldname-twitter_ressorts,
 .type-article #form-social .field.fieldname-facebook,
-.type-article #form-social .field.fieldname-facebook_ressort {
+.type-article #form-social .field.fieldname-facebook_ressorts {
     float: left;
 }
 
-.type-article #form-social .field.fieldname-twitter_ressort .label span,
-.type-article #form-social .field.fieldname-facebook_ressort .label span {
+.type-article #form-social .field.fieldname-twitter_ressorts .label span,
+.type-article #form-social .field.fieldname-facebook_ressorts .label span {
     text-transform: none;
 }
 
-.type-article #form-social .field.fieldname-twitter_ressort .widget,
-.type-article #form-social .field.fieldname-facebook_ressort .widget {
+.type-article #form-social .field.fieldname-twitter_ressorts .widget,
+.type-article #form-social .field.fieldname-facebook_ressorts .widget {
     clear: none;
     width: inherit;
     margin-top: 0;
@@ -1864,4 +1864,8 @@
 
 .type-article #form-social .field.fieldname-enabled {
     clear: left;
+}
+
+.type-article #form-social .select2-container {
+    margin-top: -5px;  /* vertically centered appearance */
 }
