@@ -6,6 +6,8 @@ zeit.content.article changes
 
 - Reactivate social media section, implement Facebook (VIV-387, VIV-371).
 
+- Make Twitter and Facebook ressorts multi selectable (VIV-389).
+
 - Reactivate breaking news feature (again), make title character limit soft
   (VIV-25).
 
